<resources>
    <string name="app_name">module_wom_batchmaterial</string>
    <string name="wom_batch_material_instruction">配料指令</string>
    <string name="wom_batch_material_records">配料记录</string>
    <string name="wom_batch_material">配料</string>
    <string name="wom_material_place_container">配放于容器</string>
    <string name="wom_material_sum_plan_num">已配/需配</string>
    <string name="wom_create_staff">创建人</string>
    <string name="wom_material_instruction_edit">配料指令编辑</string>
    <string name="wom_need">需配</string>
    <string name="wom_offer">已配</string>
    <string name="wom_no_material_state">未配料</string>
    <string name="wom_wait_batch">未配料</string>
    <string name="wom_wait_deliver">待派送</string>
    <string name="wom_wait_sign">待签收</string>
    <string name="wom_wait_allocate">待放</string>
    <string name="wom_batch_material_finish">配料完成</string>
    <string name="wom_reject_sign">拒签</string>
    <string name="wom_sign">签收</string>
    <string name="wom_deliver">派   送</string>
    <string name="wom_allocate">配  放</string>
    <string name="wom_recall">撤回</string>
    <string name="wom_choose_batch_material_records">请选择配料记录</string>
    <string name="wom_confirm_batch_material_operate">确认将所选配料记录进行[</string>
    <string name="wom_middle_right_brackets">]</string>
    <string name="wom_material_reject">物料拒签</string>
    <string name="wom_reject_reason">拒签原因</string>
    <string name="wom_recall_back">退废</string>
    <string name="wom_abandon_status">退废状态</string>
    <string name="wom_batch_material_mode">配料模式</string>
    <string name="wom_no_support_view">暂不支持该环节的查看</string>
    <string name="wom_no_scan_material_info">未能扫描到物料信息</string>
    <string name="wom_please_write_batchmaterial_num">】项请填写配料数量</string>
    <string name="wom_please_write">】项请填写</string>
    <string name="wom_material_status">物料状态</string>
    <string name="batch_material_area">配料区</string>
    <string name="batch_material_instruction_set">配料指令集</string>
    <string name="batch_please_input_bucket_code">请输入桶编码</string>
    <string name="batch_material_executing">配料执行</string>
    <string name="batch_material_scan_transport">扫码转运</string>
    <string name="batch_bind_bucket">绑  桶</string>
    <string name="batch_bucket_code">桶编码</string>
    <string name="batch_current_area">当前配料区</string>
    <string name="batch_current_workline">当前配料线</string>
    <string name="batch_next_area">下游区</string>
    <string name="batch_no_bind_bucket">未绑桶</string>
    <string name="batch_bind_bucket_tip">绑 桶</string>
    <string name="batch_please_scan_bind_bucket">请扫描桶绑定</string>
    <string name="batch_end">已完成</string>
    <string name="batch_instruction_execute">配料指令执行</string>
    <string name="batch_no_match_bucket">未能匹配桶号，请再次确认！</string>
    <string name="batch_quick_scan_bucket">快速扫桶配料</string>
    <string name="batch_bucket_info">配料通信息</string>
    <string name="batch_index">配料顺序</string>
    <string name="batch_trunk_area_info">中继位信息</string>
    <string name="batch_trunk_code">中继位编码</string>
    <string name="batch_bucket_scan_into">配料桶上料扫码</string>
    <string name="batch_pass_make_sure_into">校验通过，确认上料！</string>
    <string name="batch_ing_please_end_first">当前桶处于配料中，请先配料结束</string>
    <string name="batch_upload_material">上 料</string>
    <string name="batch_please_bind_bucket_first">请先绑定配料桶</string>
    <string name="batch_next_workline">下游配料线</string>
    <string name="batch_no_match_please_confirm_current_line_right">未能匹配中继位，请确认当前配料线是否正确！</string>
</resources>
