<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/ly_titlebar_local"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:background="@color/filterLightBlue">
            <TextView
                android:layout_width="5dp"
                android:layout_height="15dp"
                android:background="@color/themeColor"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="3dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_23"
                android:text="@string/batch_bucket_info"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.supcon.mes.mbap.view.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                android:id="@+id/bucketCode"
                android:tag="bucketCode"
                app:key="@string/batch_bucket_code"
                app:key_size="14"
                app:content_color="@color/dark_text"
                app:editable="false"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_20"
                android:id="@+id/bucketPassIv"
                android:tag="bucketPassIv"
                android:src="@drawable/replenish_ic_no_pass"
                android:visibility="visible"/>
        </RelativeLayout>
            <com.supcon.mes.mbap.view.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                android:id="@+id/batchLine"
                android:tag="batchLine"
                app:key="@string/batch_next_workline"
                app:key_size="14"
                app:content_color="@color/dark_text"
                app:editable="false"/>
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            android:id="@+id/batchIndex"
            android:tag="batchIndex"
            app:key="@string/batch_index"
            app:key_size="14"
            app:content_color="@color/dark_text"
            app:editable="false"/>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:background="@color/filterLightBlue">
            <TextView
                android:layout_width="5dp"
                android:layout_height="15dp"
                android:background="@color/themeColor"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="3dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_23"
                android:text="@string/batch_trunk_area_info"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.supcon.mes.mbap.view.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                android:id="@+id/trunkCode"
                android:tag="trunkCode"
                app:key="@string/batch_trunk_code"
                app:key_size="14"
                app:content_color="@color/dark_text"
                app:editable="false"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_20"
                android:id="@+id/trunkPassIv"
                android:tag="trunkPassIv"
                android:src="@drawable/replenish_ic_no_pass"
                android:visibility="visible"/>
        </RelativeLayout>
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            android:id="@+id/workLine"
            android:tag="workLine"
            app:key="@string/batch_current_workline"
            app:key_size="14"
            app:content_color="@color/dark_text"
            app:editable="false"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_alignParentBottom="true"
        android:background="@color/themeColor"
        android:id="@+id/submitBtn"
        android:tag="submitBtn"
        android:text="@string/batch_upload_material"
        android:textColor="@color/white"
        android:textSize="@dimen/fontSize_16sp"
        android:enabled="false"
        android:alpha="0.3"/>
</RelativeLayout>