<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:elevation="@dimen/dp_2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_10"
            android:textStyle="bold"
            android:textColor="@color/dark_text"
            android:id="@+id/activityNameTv"
            android:tag="activityNameTv"/>
        <TextView
            android:id="@+id/statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_status"
            android:maxWidth="@dimen/dp_120"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingTop="3dp"
            android:paddingEnd="12dp"
            android:paddingBottom="3dp"
            android:tag="statusTv"
            android:textColor="@color/wom_tv_status_color"
            android:textSize="14sp"
            android:text="@string/wom_executing" />
    </LinearLayout>
    <include layout="@layout/ly_line_light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_10">
        <TextView
            android:id="@+id/bucketCodeTv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/sh_cycle_bg"
            android:gravity="center"
            android:tag="bucketCodeTv"
            android:text="@string/batch_bucket_code"
            android:textColor="@color/titleTextColor"
            android:textSize="@dimen/fontSize_11sp"
            android:maxLines="2"
            android:ellipsize="end"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/batch_current_area"
                    android:textColor="@color/titleTextColor"
                    android:textSize="@dimen/dp_12"
                    android:drawableStart="@drawable/ic_eam_model"
                    android:drawablePadding="@dimen/dp_5"/>
                <com.supcon.mes.mbap.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:id="@+id/batchCurrentArea"
                    android:tag="batchCurrentArea"
                    app:key_width="0dp"
                    app:content_size="15"
                    app:content_color="@color/dark_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/batch_current_workline"
                    android:textColor="@color/titleTextColor"
                    android:textSize="@dimen/dp_12"
                    android:drawableStart="@drawable/ic_mechanism"
                    android:drawablePadding="@dimen/dp_5"/>
                <com.supcon.mes.mbap.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:id="@+id/batchCurrentWorkLine"
                    android:tag="batchCurrentWorkLine"
                    app:key_width="0dp"
                    app:content_size="15"
                    app:content_color="@color/dark_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/batch_next_area"
                    android:textColor="@color/titleTextColor"
                    android:drawableStart="@drawable/ic_area"
                    android:drawablePadding="@dimen/dp_5"/>
                <com.supcon.mes.mbap.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:id="@+id/batchNextArea"
                    android:tag="batchNextArea"
                    app:key_width="0dp"
                    app:content_size="15"
                    app:content_color="@color/dark_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/wom_time"
                    android:textColor="@color/titleTextColor"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="@dimen/dp_5"/>
                <com.supcon.mes.mbap.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:id="@+id/time"
                    android:tag="time"
                    app:key_width="0dp"
                    app:content_size="15"
                    app:content_color="@color/dark_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_25"
        android:id="@+id/bindBucket"
        style="@style/operateBtnStyle"
        android:background="@drawable/wom_sh_start_bg"
        android:tag="bindBucket"
        android:text="@string/batch_bind_bucket"
        android:gravity="center"
        android:layout_gravity="end"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"/>

</LinearLayout>